Main_Folder/MY_PROJECTS/drum-machine/src/App.scss
.App{
  background-color: purple;
  height: 100vh;
  max-height: 100vh;
  margin: 0;
  padding: 0;
}
.btn {
  border-radius: 10%;
}
.drum-btn {
  width: 7vw;
  height: 7vw;
  font-size: 40px;
}

#indicators-row {
  max-height: 10vh;
  height: 10vh;
}

input[type="range"],
.slider {
  -webkit-appearance: slider-vertical; /* Hides the slider so that custom slider can be made */
  //width: 10vh; /* Specific width is required for Firefox. */
  height: 33%;
  //  margin-top: auto;
  //  margin-bottom:auto;
  /* margin-top: 95vh;
   margin-left: -20vw;
   margin-right: 0; */
  appearance: slider-vertical;
  background: red; /* Otherwise white in Chrome */
  border: solid yellow;
  grid-area: slider;
}

input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  height: 20px;
  width: 20px;
  background-color: green;
  // color: green;
}

// input[type=range]:focus {
//   outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
// }

// input[type=range]::-ms-track {
//   width: 100%;
//   cursor: pointer;

//   /* Hides the slider so custom styles can be added */
//   background: transparent;
//   border-color: transparent;
//   color: transparent;
// }

#pad {
  //width: 20rem;
  margin: 0;
  //margin-bottom: 10%;
  padding: 0;
  // background-color: red;
}

.pad-keys {
  color: red;
  animation: blink 1s;
}
@keyframes blink {
  0% {
    background-color: red;
  }
  100% {
    background-color: black;
  }
}

.pad-row {
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  height: 9vw;
  margin: 0;
  //background-color: green;
}



.vinyl-grey-parts {
  fill: rgba(30, 30, 30, 1);

}

svg {
  filter: drop-shadow(-10px 10px 5px rgb(0 0 0 /0.4));
  max-height: 100%;
  overflow: visible;
}

@media (width<576px){
  .h-sm-50{
    height: 50% !important;
  }
}

/*#id{
  display: grid;
  grid-template-areas:
  "toggle . . . . slider"
  "display display display display display slider"
  ". . . . . slider";
}*/

